Fix dark mode CSS

--- a/static/assets/css/tools.css
+++ b/static/assets/css/tools.css
@@ -76,6 +76,10 @@ a {
   color: #000;
 }
 
+#hero > div > p > a{
+  color: #000;
+}
+
 .input-row {
   display: flex;
   flex-direction: row;
@@ -184,6 +188,7 @@ a {
   font-size: 1.2rem;
   font-weight: 700;
   margin-top: 0px;
+  color: #000;
 }
 
 .powered-by br {
